--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
     <style>
         body {
@@ -17,7 +19,7 @@
         }
 
         .sidebar {
-            width:300px;
+            width: 300px;
             margin: 0px auto;
             background-color: white;
             padding: 15px 15px 15px 15px;
@@ -25,8 +27,8 @@
         }
 
         .logo {
-            height: 40px;
-            width:auto;
+            height: 30px;
+            width: auto;
         }
 
         .feature-icon {
@@ -40,7 +42,7 @@
         }
 
         .setting-icon {
-            font-size: 24px;
+            font-size: 20px;
         }
 
         .tab {
@@ -55,9 +57,11 @@
             border: none;
             outline: none;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 400;
             color: gray;
+            padding-left: 0px;
+            margin-right: 10px;
         }
 
         /* Change background color of buttons on hover */
@@ -77,18 +81,32 @@
             display: none;
             border-top: none;
         }
-         .searchbar{
-            border: 1px solid rgb(221, 221, 221);
+
+        .searchbar {
+            border: 1px solid #D0D5D8;
             border-radius: 3px;
-            font-size: 14px;
-            padding: 5px 7px;
+            font-size: 12px;
+            padding: 7px 7px;
             font-weight: 400;
-         }
+        }
+        .searchbar:focus,
+        .searchbar:active{
+            outline: none !important;
+            box-sizing: none !important;
+            border: 1px solid purple;
+            
+        }
+
         .heading-secondry {
-            font-size: 14px !important;
+            font-size: 12px !important;
             font-weight: 500;
             color: black;
             margin-bottom: 3px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
 
         .text {
@@ -101,38 +119,112 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
         }
-        .load-more-btn{
+
+        .load-more-btn {
             font-size: 14px;
-             background-color: transparent;
-             border: none;
-             color:#C78CE9;
+            background-color: transparent;
+            border: none;
+            color: #C78CE9;
         }
-        .upgrade-icon{
-            font-size: 16px;
-        }
-        .upgrade-text{
+
+        .upgrade-icon {
             font-size: 14px;
+        }
+
+        .upgrade-text {
+            font-size: 12px;
             color: gray;
         }
-        .card-bg{
+
+        .card-bg {
             background-color: #f6f9fc;
-            padding:10px 7px;
+            padding: 10px 7px;
             border-radius: 3px;
+            border: 1px solid transparent;
         }
-        .upgrade-btn{
+        .card-bg:hover{
+            background-color: #dfeefc;
+            border: 1px solid #deecfa;
+        }
+        .upgrade-btn {
             background-color: #FEF1FF;
             border: none;
             font-size: 14px;
             font-weight: 500;
-            color:#C78CE9;
+            color: #C78CE9;
             padding: 7px;
             width: fit-content;
+            border-radius: 4px;
+        }
+
+        iframe#userHtmlFrame::-webkit-scrollbar {
+            width: 1em;
+        }
+
+        iframe#userHtmlFrame::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        }
+
+        iframe#userHtmlFrame::-webkit-scrollbar-thumb {
+            background-color: darkgrey;
+            outline: 1px solid slategrey;
+        }
+        .categories{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .cat{
+            font-size: 12px;
+            font-weight: 500;
+            width: fit-content;
+            padding: 2px 7px;
+            border-radius: 7px;
+            border: none;
+            margin-right: 7px;
+            margin-bottom: 8px;
+        }
+        .gray{
+         background-color: #E6F0F9;
+         color: #697A82;
+        }
+        .blue{
+            background-color: #BDEEFF;
+            color: #557C99; 
+        }
+        .green{
+            background-color: #ECFCD9;
+            color: #7B9C65;
+        }
+        .pink{
+            background-color: #FAF3FE;
+            color: #C592DA;
+        }
+        .red{
+            background-color: #E6F0F9;
+            color: #BE9E93;
+        }
+        .purple{
+            background-color: #F1E1FE;
+            color: #916E9C;
+        }
+        .orange{
+            background-color: #FBF3E3;
+            color: #CD9F8B;
+        }
+        .go-arrow{
+            font-size: 14px;
+            color: gray;
+            margin-right: 10px;
+        }
+        .prize{
+            font-size: 16px;
+            text-decoration: none;
         }
     </style>
 </head>
 
 <body>
-    <div class="sidebar shadow">
+    <div class="sidebar ">
         <div class="d-flex align-items-center justify-content-between px-1">
             <div>
                 <img src="https://mergeasy123.netlify.app/sidebar/logo.png" alt="" class="logo">
@@ -147,7 +239,7 @@
             <button class="tablinks" onclick="homePage(event, 'Templates')">Templates</button>
         </div>
 
-        <div id="Features" class="tabcontent px-2">
+        <div id="Features" class="tabcontent ">
             <div class="features">
                 <!-- <h2 class="heading-main">
                     Features
@@ -155,125 +247,162 @@
                 <div class="search-input mt-2 py-1">
                     <input type="search" name="" id="" class="w-100 searchbar" placeholder="Search or ask anything...">
                 </div>
-           
+                <div class="mt-2 categories">
+                    <button class="gray cat">
+                        Core
+                    </button>
+                    <button class="blue cat">
+                        Loaders
+                    </button>
+                    <button class="green cat">
+                        Using AI
+                    </button>
+                    <button class="orange cat">
+                        Modifiers
+                    </button>
+                    <button class="red cat">
+                        Writers
+                    </button>
+                    <button class="purple cat">
+                        Control Flow
+                    </button>
+                    <button class="pink cat">
+                        Advance
+                    </button>
+                </div>
+
                 <div class="features-list mt-2 ">
                     <div class="card-bg mb-2 shadow-sm">
                         <a href="" class="text-decoration-none">
-                            <div class="d-flex align-items-start">
-                                <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
-                                        class="feature-icon">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
                                 </div>
                                 <div>
-                                    <h3 class="heading-secondry">ChatGPT custom prompt</h3>
-                                    <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
                                 </div>
                             </div>
                         </a>
-                    </div >
+                    </div>
                     <div class="card-bg  mb-2 shadow-sm ">
                         <a href="" class="text-decoration-none">
-                            <div class="d-flex align-items-start">
-                                <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
-                                        class="feature-icon">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
                                 </div>
                                 <div>
-                                    <h3 class="heading-secondry">ChatGPT custom prompt</h3>
-                                    <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="mt-3 pt-2">
+                    <!-- <div class="mt-3 pt-2">
                         <button class="w-100 load-more-btn">Load More&nbsp;<i class="bi bi-arrow-clockwise ms-1"></i></button>
                     </div>
+                </div> -->
                 </div>
             </div>
-        </div>
 
-        <div id="Templates" class="tabcontent px-2">
-            <div class="templates">
-                <!-- <h2 class="heading-main">
+            <div id="Templates" class="tabcontent ">
+                <div class="templates">
+                    <!-- <h2 class="heading-main">
                     Templates
                 </h2> -->
-                <div class="search-input mt-2 py-1">
-                    <input type="search" name="" id="" class="w-100 searchbar" placeholder="Search or ask anything...">
+                    <div class="search-input mt-2 py-1">
+                        <input type="search" name="" id="" class="w-100 searchbar"
+                            placeholder="Search or ask anything...">
+                    </div>
+                    <div class="templates-list mt-3">
+                        <div class="">
+                            <a href="" class="text-decoration-none">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">GPT to Craft an Icebreaker Based on a Website </h3>
+                                        <p class="text mb-0 pb-0">
+                                            Input company websites, we'll scrape the content and use GPT to
+                                            generate a an icebreaker
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <hr>
+                        <div class="">
+                            <a href="" class="text-decoration-none">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry"> GPT to Craft an Icebreaker Based on a Website
+                                        </h3>
+                                        <p class="text mb-0 pb-0">Input company websites, we'll scrape the content and
+                                            use
+                                            GPT to
+                                            generate a an icebreaker</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <hr>
+                        <div class="mt-3">
+                            <button class="w-100 load-more-btn  ">Load More<i
+                                    class="bi bi-arrow-clockwise ms-1"></i></button>
+                        </div>
+                    </div>
                 </div>
-                <div class="templates-list mt-3">
-                    <div class="">
-                        <a href="" class="text-decoration-none">
-                            <div class="d-flex align-items-start">
-                                <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
-                                        class="feature-icon">
-                                </div>
-                                <div>
-                                    <h3 class="heading-secondry">GPT to Craft an Icebreaker Based on a Website </h3>
-                                    <p class="text mb-0 pb-0">
-                                        Input company websites, we'll scrape the content and use GPT to
-                                        generate a an icebreaker
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <hr>
-                    <div class="">
-                        <a href="" class="text-decoration-none">
-                            <div class="d-flex align-items-start">
-                                <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
-                                        class="feature-icon">
-                                </div>
-                                <div>
-                                    <h3 class="heading-secondry"> GPT to Craft an Icebreaker Based on a Website </h3>
-                                    <p class="text mb-0 pb-0">Input company websites, we'll scrape the content and use
-                                        GPT to
-                                        generate a an icebreaker</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <hr>
-                    <div class="mt-3">
-                        <button class="w-100 load-more-btn  ">Load More<i class="bi bi-arrow-clockwise ms-1"></i></button>
-                    </div>
+            </div>
+
+            <hr>
+            <div class="d-flex align-items-center">
+                <div class="upgrade-icon">
+                    <i class="bi bi-credit-card-2-front-fill "></i>&nbsp;&nbsp;
+                </div>
+                <div class="upgrade-text ">
+                    1000/100 monthly credits left. <a href="" class="prize">🎁</a>
                 </div>
             </div>
-        </div>
-
-        <hr>
-        <div class="d-flex align-items-center">
-            <div class="upgrade-icon">
-                <i class="bi bi-credit-card-2-front-fill "></i>&nbsp;&nbsp;
-            </div>
-            <div class="upgrade-text ">
-                1000/100 monthly credits left.
+            <div class="">
+                <button class="w-100 mt-2 upgrade-btn">UPGRADE</button>
             </div>
         </div>
-        <div class="shadow-sm">
-            <button class="w-100 mt-2 upgrade-btn">UPGRADE</button>
-        </div>
-    </div>
 
-    <script>
-        function homePage(evt, cityName) {
-            var i, tabcontent, tablinks;
-            tabcontent = document.getElementsByClassName("tabcontent");
-            for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
+        <script>
+            function homePage(evt, cityName) {
+                var i, tabcontent, tablinks;
+                tabcontent = document.getElementsByClassName("tabcontent");
+                for (i = 0; i < tabcontent.length; i++) {
+                    tabcontent[i].style.display = "none";
+                }
+                tablinks = document.getElementsByClassName("tablinks");
+                for (i = 0; i < tablinks.length; i++) {
+                    tablinks[i].className = tablinks[i].className.replace(" active", "");
+                }
+                document.getElementById(cityName).style.display = "block";
+                evt.currentTarget.className += " active";
             }
-            tablinks = document.getElementsByClassName("tablinks");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-            document.getElementById(cityName).style.display = "block";
-            evt.currentTarget.className += " active";
-        }
-        document.getElementById("defaultOpen").click();
+            document.getElementById("defaultOpen").click();
 
-    </script>
+        </script>
 </body>
 
 </html>
