--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -89,12 +89,13 @@
             padding: 7px 7px;
             font-weight: 400;
         }
+
         .searchbar:focus,
-        .searchbar:active{
+        .searchbar:active {
             outline: none !important;
             box-sizing: none !important;
             border: 1px solid purple;
-            
+
         }
 
         .heading-secondry {
@@ -127,8 +128,9 @@
             color: #C78CE9;
         }
 
-        .upgrade-icon {
-            font-size: 14px;
+        .upgrade-icon img {
+            height: 22px;
+            width: auto;
         }
 
         .upgrade-text {
@@ -142,10 +144,12 @@
             border-radius: 3px;
             border: 1px solid transparent;
         }
-        .card-bg:hover{
+
+        .card-bg:hover {
             background-color: #dfeefc;
             border: 1px solid #deecfa;
         }
+
         .upgrade-btn {
             background-color: #FEF1FF;
             border: none;
@@ -169,54 +173,65 @@
             background-color: darkgrey;
             outline: 1px solid slategrey;
         }
-        .categories{
+
+        .categories {
             display: flex;
             flex-wrap: wrap;
         }
-        .cat{
-            font-size: 12px;
+
+        .cat {
+            font-size: 11px;
             font-weight: 500;
             width: fit-content;
-            padding: 2px 7px;
+            padding: 2px 5px;
             border-radius: 7px;
             border: none;
             margin-right: 7px;
             margin-bottom: 8px;
         }
-        .gray{
-         background-color: #E6F0F9;
-         color: #697A82;
+
+        .gray {
+            background-color: #E6F0F9;
+            color: #697A82;
         }
-        .blue{
+
+        .blue {
             background-color: #BDEEFF;
-            color: #557C99; 
+            color: #557C99;
         }
-        .green{
+
+        .green {
             background-color: #ECFCD9;
             color: #7B9C65;
         }
-        .pink{
+
+        .pink {
             background-color: #FAF3FE;
             color: #C592DA;
         }
-        .red{
+
+        .red {
             background-color: #E6F0F9;
             color: #BE9E93;
         }
-        .purple{
+
+        .purple {
             background-color: #F1E1FE;
             color: #916E9C;
         }
-        .orange{
+
+        .orange {
             background-color: #FBF3E3;
             color: #CD9F8B;
         }
-        .go-arrow{
+
+        .go-arrow {
             font-size: 14px;
             color: gray;
-            margin-right: 10px;
+            margin-left: 7px;
         }
-        .prize{
+
+        .prize {
             font-size: 16px;
             text-decoration: none;
         }
@@ -255,7 +270,7 @@
                         Loaders
                     </button>
                     <button class="green cat">
-                        Using AI
+                        Using AI ✨
                     </button>
                     <button class="orange cat">
                         Modifiers
@@ -310,99 +325,230 @@
                             </div>
                         </a>
                     </div>
+                    <div class="card-bg mb-2 shadow-sm">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card-bg  mb-2 shadow-sm ">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card-bg mb-2 shadow-sm">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card-bg  mb-2 shadow-sm ">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card-bg  mb-2 shadow-sm ">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card-bg  mb-2 shadow-sm ">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card-bg  mb-2 shadow-sm ">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card-bg  mb-2 shadow-sm ">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-start">
+                                    <div class="feature-icon-div">
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            class="feature-icon">
+                                    </div>
+                                    <div>
+                                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                        <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                     <!-- <div class="mt-3 pt-2">
                         <button class="w-100 load-more-btn">Load More&nbsp;<i class="bi bi-arrow-clockwise ms-1"></i></button>
                     </div>
                 </div> -->
                 </div>
             </div>
-
-            <div id="Templates" class="tabcontent ">
-                <div class="templates">
-                    <!-- <h2 class="heading-main">
+        </div>
+        <div id="Templates" class="tabcontent ">
+            <div class="templates">
+                <!-- <h2 class="heading-main">
                     Templates
                 </h2> -->
-                    <div class="search-input mt-2 py-1">
-                        <input type="search" name="" id="" class="w-100 searchbar"
-                            placeholder="Search or ask anything...">
-                    </div>
-                    <div class="templates-list mt-3">
-                        <div class="">
-                            <a href="" class="text-decoration-none">
+                <div class="search-input mt-2 py-1">
+                    <input type="search" name="" id="" class="w-100 searchbar" placeholder="Search or ask anything...">
+                </div>
+                <div class="templates-list mt-3">
+                    <div class="card-bg mb-2 shadow-sm">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-center">
                                 <div class="d-flex align-items-start">
                                     <div class="feature-icon-div">
-                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                        <img src="https://mergeasy123.netlify.app/sidebar/app-logo.jpg" alt="chatgpt"
                                             class="feature-icon">
                                     </div>
                                     <div>
-                                        <h3 class="heading-secondry">GPT to Craft an Icebreaker Based on a Website </h3>
-                                        <p class="text mb-0 pb-0">
-                                            Input company websites, we'll scrape the content and use GPT to
-                                            generate a an icebreaker
-                                        </p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <hr>
-                        <div class="">
-                            <a href="" class="text-decoration-none">
-                                <div class="d-flex align-items-start">
-                                    <div class="feature-icon-div">
-                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
-                                            class="feature-icon">
-                                    </div>
-                                    <div>
-                                        <h3 class="heading-secondry"> GPT to Craft an Icebreaker Based on a Website
-                                        </h3>
-                                        <p class="text mb-0 pb-0">Input company websites, we'll scrape the content and
-                                            use
-                                            GPT to
+                                        <h3 class="heading-secondry">GPT to Craft an Icebreaker Based on a Website</h3>
+                                        <p class="text mb-0 pb-0">Input company websites, we'll scrape the content and use GPT to
                                             generate a an icebreaker</p>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
-                        <hr>
-                        <div class="mt-3">
-                            <button class="w-100 load-more-btn  ">Load More<i
-                                    class="bi bi-arrow-clockwise ms-1"></i></button>
-                        </div>
+                                <div>
+                                    <i class="bi bi-chevron-right go-arrow"></i>
+                                </div>
+                            </div>
+                        </a>
                     </div>
+                 
                 </div>
-            </div>
-
-            <hr>
-            <div class="d-flex align-items-center">
-                <div class="upgrade-icon">
-                    <i class="bi bi-credit-card-2-front-fill "></i>&nbsp;&nbsp;
-                </div>
-                <div class="upgrade-text ">
-                    1000/100 monthly credits left. <a href="" class="prize">🎁</a>
-                </div>
-            </div>
-            <div class="">
-                <button class="w-100 mt-2 upgrade-btn">UPGRADE</button>
             </div>
         </div>
 
-        <script>
-            function homePage(evt, cityName) {
-                var i, tabcontent, tablinks;
-                tabcontent = document.getElementsByClassName("tabcontent");
-                for (i = 0; i < tabcontent.length; i++) {
-                    tabcontent[i].style.display = "none";
-                }
-                tablinks = document.getElementsByClassName("tablinks");
-                for (i = 0; i < tablinks.length; i++) {
-                    tablinks[i].className = tablinks[i].className.replace(" active", "");
-                }
-                document.getElementById(cityName).style.display = "block";
-                evt.currentTarget.className += " active";
-            }
-            document.getElementById("defaultOpen").click();
+        <hr>
+        <div class="d-flex align-items-center">
+            <div class="upgrade-icon">
+                <img src="https://mergeasy123.netlify.app/sidebar/credit.jpg" alt="">&nbsp;&nbsp;
+            </div>
+            <div class="upgrade-text ">
+                1000/100 monthly credits left. <a href="" class="prize">🎁</a>
+            </div>
+        </div>
+        <div class="">
+            <button class="w-100 mt-2 upgrade-btn">UPGRADE</button>
+        </div>
+    </div>
 
-        </script>
+    <script>
+        function homePage(evt, cityName) {
+            var i, tabcontent, tablinks;
+            tabcontent = document.getElementsByClassName("tabcontent");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+            tablinks = document.getElementsByClassName("tablinks");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+            document.getElementById(cityName).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
+        document.getElementById("defaultOpen").click();
+
+    </script>
 </body>
 
 </html>
